[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/sidewalk.png" type="Texture" id=1]
[ext_resource path="res://Areas/M3 - school/Quiz Game/quiz.gd" type="Script" id=2]
[ext_resource path="res://Assets/Temp Assets/dogicapixelbold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/sidewalk.png-20d12666837bf560c2edac79f0e848bd.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/sidewalk.png-20d12666837bf560c2edac79f0e848bd.stex"

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/sidewalk.png-20d12666837bf560c2edac79f0e848bd.stex"

[node name="Quiz" type="Control"]
script = ExtResource( 2 )

[node name="Question" type="RichTextLabel" parent="."]
margin_left = 289.0
margin_top = 43.0
margin_right = 796.0
margin_bottom = 133.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center] 1. Question Content [/center]

"
text = " 1. Question Content 

"

[node name="Answers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="First" type="TextureButton" parent="Answers"]
margin_left = 221.0
margin_top = 279.0
margin_right = 317.0
margin_bottom = 375.0
texture_normal = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Answers/First"]
margin_left = 29.0
margin_top = 32.0
margin_right = 69.0
margin_bottom = 72.0

[node name="Second" type="TextureButton" parent="Answers"]
margin_left = 643.0
margin_top = 265.0
margin_right = 739.0
margin_bottom = 361.0
texture_normal = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Answers/Second"]
margin_left = 30.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 70.0

[node name="Third" type="TextureButton" parent="Answers"]
margin_left = 254.0
margin_top = 484.0
margin_right = 350.0
margin_bottom = 580.0
texture_normal = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Answers/Third"]
margin_left = 27.0
margin_top = 32.0
margin_right = 67.0
margin_bottom = 72.0

[node name="Fourth" type="TextureButton" parent="Answers"]
margin_left = 594.0
margin_top = 456.0
margin_right = 690.0
margin_bottom = 552.0
texture_normal = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Answers/Fourth"]
margin_left = 27.0
margin_top = 31.0
margin_right = 67.0
margin_bottom = 71.0

[connection signal="pressed" from="Answers/First" to="." method="_on_First_pressed"]
[connection signal="pressed" from="Answers/Second" to="." method="_on_Second_pressed"]
[connection signal="pressed" from="Answers/Third" to="." method="_on_Third_pressed"]
[connection signal="pressed" from="Answers/Fourth" to="." method="_on_Fourth_pressed"]
